Actions
Bug #12901
closedloader: can not read zfs pool with slog removed
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
The vdev_init() does check for "known" vdev types, the [log] device removal will create "hole" device but vdev_init() does not allow it.
Testing done: previously unreadable pool is readable again.
Related issues
Updated by Patrick Mooney about 2 years ago
- Related to Bug #12894: root zpool with SLOG should be bootable added
Updated by Patrick Mooney about 2 years ago
I had a root pool with such a VDEV_HOLE associated with it. Prior to the fix, loader was unable to deal with the pool at all. After, it was functioning as desired.
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9117d17eb29235fc103fe0fa874b149d3f8a9a0e
commit 9117d17eb29235fc103fe0fa874b149d3f8a9a0e Author: Toomas Soome <tsoome@me.com> Date: 2020-06-27T15:13:55.000Z 12901 loader: can not read zfs pool with slog removed Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions