12901 loader: can not read zfs pool with slog removed Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>